--- a/project.html
+++ b/project.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Golam Rabbani Sujon</h1>
+        <h1>Golam Rabbani Sujon.</h1>
         <nav>
             <a href="">One</a>
             <a href="">Two</a>
